# ModelWorks2

./: .gitignore  .vscode  README.md  pyproject.toml  spec.py
modelworks2/: __init__.py  distributions.py  spec.py  utils.py
tests/: test-input.csv  test_IO.py  test_Spec.py
tests/test_distributions/: test_CatDist.py  test_FloatDist.py
